# NEARHorizon2023Bootcamp

./: README.md
near-sc-1/: Cargo.toml  README.md
near-sc-1/neardev/: dev-account  dev-account.env
near-sc-1/src/: lib.rs
near-sc-2/: Cargo.toml
near-sc-2/src/: lib.rs
src/: main.rs
week1-2/src/: Cargo.toml
