[package]
name = "near-sc-2"
version = "0.1.0"
authors = ["Ayoung <saing.sab@gmail.com>"]
edition = "2021"

[dependencies]
near-sdk = "4.1.1"
near-sdk-contract-tools = "1.0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"